--- a/Artable/Storyboard/Login.storyboard
+++ b/Artable/Storyboard/Login.storyboard
@@ -30,23 +30,23 @@
                                         <color key="textColor" red="0.22745098039215686" green="0.26666666666666666" blue="0.36078431372549019" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ZKk-gX-CDt">
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ZKk-gX-CDt">
                                         <rect key="frame" x="0.0" y="35.333333333333343" width="335" height="48"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="48" id="YXA-7w-ef1"/>
                                         </constraints>
                                         <nil key="textColor"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits"/>
+                                        <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="16"/>
+                                        <textInputTraits key="textInputTraits" textContentType="email"/>
                                     </textField>
-                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wlw-Kq-jce">
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wlw-Kq-jce">
                                         <rect key="frame" x="0.0" y="96.333333333333343" width="335" height="48"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="48" id="kTu-iJ-8se"/>
                                         </constraints>
                                         <nil key="textColor"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits"/>
+                                        <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="16"/>
+                                        <textInputTraits key="textInputTraits" secureTextEntry="YES" textContentType="password"/>
                                     </textField>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="trailing" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="anl-hO-UXm">
                                         <rect key="frame" x="0.0" y="157.33333333333331" width="335" height="31"/>
@@ -115,6 +115,117 @@
             </objects>
             <point key="canvasLocation" x="1130.4000000000001" y="-64.285714285714292"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="Zn9-Td-LTN">
+            <objects>
+                <viewController id="mCc-AD-c8f" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="GXq-MJ-n6v">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg_right1" translatesAutoresizingMaskIntoConstraints="NO" id="Cen-Ux-i3P">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                            </imageView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="13" translatesAutoresizingMaskIntoConstraints="NO" id="zHL-Hd-bJX">
+                                <rect key="frame" x="20" y="74" width="335" height="327.33333333333331"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Register" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9eD-2B-4Ab">
+                                        <rect key="frame" x="0.0" y="0.0" width="335" height="22.333333333333332"/>
+                                        <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="17"/>
+                                        <color key="textColor" red="0.2274509804" green="0.2666666667" blue="0.36078431370000003" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="gQw-B6-t4r">
+                                        <rect key="frame" x="0.0" y="35.333333333333329" width="335" height="48"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="48" id="Uea-84-ZBR"/>
+                                        </constraints>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="16"/>
+                                        <textInputTraits key="textInputTraits" textContentType="username"/>
+                                    </textField>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="02Y-bt-i03">
+                                        <rect key="frame" x="0.0" y="96.333333333333343" width="335" height="48"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="48" id="029-ft-baf"/>
+                                        </constraints>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="16"/>
+                                        <textInputTraits key="textInputTraits" textContentType="email"/>
+                                    </textField>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jei-dX-1Uh">
+                                        <rect key="frame" x="0.0" y="157.33333333333334" width="335" height="48"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="48" id="PVs-4M-hy9"/>
+                                        </constraints>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="16"/>
+                                        <textInputTraits key="textInputTraits" secureTextEntry="YES" textContentType="password"/>
+                                    </textField>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Confirm Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="yG6-an-ciB">
+                                        <rect key="frame" x="0.0" y="218.33333333333331" width="335" height="48"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="48" id="AOe-RB-CR4"/>
+                                        </constraints>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="16"/>
+                                        <textInputTraits key="textInputTraits" secureTextEntry="YES" textContentType="password"/>
+                                    </textField>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7of-LV-RjJ">
+                                        <rect key="frame" x="0.0" y="279.33333333333331" width="335" height="48"/>
+                                        <color key="backgroundColor" red="0.83529411764705885" green="0.39215686274509803" blue="0.31372549019607843" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="48" id="oyj-Si-ne1"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="17"/>
+                                        <state key="normal" title="Register">
+                                            <color key="titleColor" red="0.95294117647058818" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="calibratedRGB"/>
+                                        </state>
+                                    </button>
+                                </subviews>
+                            </stackView>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="TXx-3w-SoV">
+                                <rect key="frame" x="169" y="426.33333333333331" width="37" height="37"/>
+                                <color key="color" red="0.2274509804" green="0.2666666667" blue="0.36078431370000003" alpha="1" colorSpace="calibratedRGB"/>
+                            </activityIndicatorView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="red_check" translatesAutoresizingMaskIntoConstraints="NO" id="MEH-RL-tdD">
+                                <rect key="frame" x="319" y="242.33333333333334" width="26" height="26.000000000000028"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="26" id="avj-Ix-gqO"/>
+                                    <constraint firstAttribute="height" constant="26" id="ogE-hz-6Pc"/>
+                                </constraints>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="red_check" translatesAutoresizingMaskIntoConstraints="NO" id="Do4-qG-tub">
+                                <rect key="frame" x="319" y="303.33333333333331" width="26" height="26"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="26" id="TKm-kf-8ib"/>
+                                    <constraint firstAttribute="height" constant="26" id="v4Y-gU-tTk"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="Cen-Ux-i3P" firstAttribute="top" secondItem="GXq-MJ-n6v" secondAttribute="top" id="0nW-Dq-edi"/>
+                            <constraint firstItem="TXx-3w-SoV" firstAttribute="top" secondItem="zHL-Hd-bJX" secondAttribute="bottom" constant="25" id="EHe-Ei-XxH"/>
+                            <constraint firstItem="zHL-Hd-bJX" firstAttribute="top" secondItem="C7Q-Og-5w1" secondAttribute="top" constant="30" id="Hay-3a-GTi"/>
+                            <constraint firstItem="MEH-RL-tdD" firstAttribute="trailing" secondItem="jei-dX-1Uh" secondAttribute="trailing" constant="-10" id="NaT-hq-rJa"/>
+                            <constraint firstItem="Do4-qG-tub" firstAttribute="trailing" secondItem="yG6-an-ciB" secondAttribute="trailing" constant="-10" id="Pef-tQ-sZf"/>
+                            <constraint firstItem="TXx-3w-SoV" firstAttribute="centerX" secondItem="GXq-MJ-n6v" secondAttribute="centerX" id="XCk-TE-5da"/>
+                            <constraint firstItem="C7Q-Og-5w1" firstAttribute="trailing" secondItem="zHL-Hd-bJX" secondAttribute="trailing" constant="20" id="gfI-mI-ywa"/>
+                            <constraint firstAttribute="trailing" secondItem="Cen-Ux-i3P" secondAttribute="trailing" id="q0X-iN-HbZ"/>
+                            <constraint firstItem="Cen-Ux-i3P" firstAttribute="leading" secondItem="GXq-MJ-n6v" secondAttribute="leading" id="qV4-c8-zQw"/>
+                            <constraint firstItem="Do4-qG-tub" firstAttribute="centerY" secondItem="yG6-an-ciB" secondAttribute="centerY" id="szr-KV-yJn"/>
+                            <constraint firstAttribute="bottom" secondItem="Cen-Ux-i3P" secondAttribute="bottom" id="uc5-A2-6CG"/>
+                            <constraint firstItem="zHL-Hd-bJX" firstAttribute="leading" secondItem="C7Q-Og-5w1" secondAttribute="leading" constant="20" id="vD5-1X-iCR"/>
+                            <constraint firstItem="MEH-RL-tdD" firstAttribute="centerY" secondItem="jei-dX-1Uh" secondAttribute="centerY" id="zjo-fu-jyx"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="C7Q-Og-5w1"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="imm-O3-bN4" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2021.5999999999999" y="-64.285714285714292"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="7Tg-me-05R">
             <objects>
@@ -136,5 +247,7 @@
     </scenes>
     <resources>
         <image name="bg_left1" width="1949" height="3441"/>
+        <image name="bg_right1" width="1958" height="3446"/>
+        <image name="red_check" width="40" height="40"/>
     </resources>
 </document>
